plugins {
    id 'java'
    id'idea'
    id 'io.freefair.lombok' version '6.4.1'
}


idea {
    project {
        jdkName = '17'
        languageLevel = '17'
    }
}

repositories {
    mavenCentral()
}

sourceCompatibility = 17
targetCompatibility = 17

dependencies {
    implementation('com.google.guava:guava:31.1-jre')

    //Logging
    implementation('org.apache.logging.log4j:log4j-slf4j-impl:2.18.0')
    implementation('ch.qos.logback:logback-classic:1.3.0-alpha5')
    implementation('ch.qos.logback:logback-core:1.3.0-alpha5')

    testImplementation('org.junit.jupiter:junit-jupiter-api:5.5.2')
    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.5.2')
}

sourceSets.main.java.srcDirs += ['src/java']
